Pre-loaded state

--- a/web/index.html
+++ b/web/index.html
@@ -13,7 +13,9 @@
     />
   </head>
   <body>
-    <!-- prettier-ignore -->
+    <script id="preloaded-state">
+      window.__PRELOADED_STATE__ = '{{{state}}}';
+    </script>
     <div id="root" class="init">{{{content}}}</div>
   </body>
 </html>
